[gd_scene load_steps=19 format=3 uid="uid://ly81cippa4dk"]

[ext_resource type="Script" path="res://boat.gd" id="1_pv1l4"]
[ext_resource type="PackedScene" uid="uid://dsik30if3a23x" path="res://scenes/interactables/interactable_object.tscn" id="2_6pn5e"]
[ext_resource type="AudioStream" uid="uid://b2vjuc8llm1d0" path="res://sounds/generic/generic_interact.ogg" id="3_3xr27"]
[ext_resource type="PackedScene" uid="uid://b3p0gltahpmpq" path="res://sourceModels/beach/boat.glb" id="6_d2i44"]
[ext_resource type="AudioStream" uid="uid://d01c74aq65koq" path="res://sounds/motorboat.ogg" id="7_8yhjq"]
[ext_resource type="Texture2D" uid="uid://dfhwow1udnxut" path="res://sourceModels/beach/water_arc.png" id="7_ueh5k"]
[ext_resource type="Script" path="res://scenes/scenes/DreamScenes/AlternateCamera.gd" id="8_uwcub"]
[ext_resource type="PackedScene" uid="uid://dv2mfrpn0x5md" path="res://scenes/dream_condition.tscn" id="9_vnix6"]
[ext_resource type="Texture2D" uid="uid://6metdhui2wfa" path="res://textures/billboard_items/generic_lock.png" id="10_6yptr"]
[ext_resource type="PackedScene" uid="uid://djmioxsjxgd0" path="res://scenes/interactables/golf_UI.tscn" id="10_vkjiy"]
[ext_resource type="Script" path="res://scenes/interactables/HoverItem.gd" id="11_gt5x5"]
[ext_resource type="PackedScene" uid="uid://cikt2vicc06wx" path="res://scenes/interactables/prompt_without_interaction.tscn" id="12_a0kp1"]
[ext_resource type="AudioStream" uid="uid://cpe6eouhlbt0y" path="res://sounds/generic/cant_interact.ogg" id="13_onosk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ah4cb"]
size = Vector3(1.8, 1.5, 4.5)

[sub_resource type="Animation" id="Animation_2fr0q"]
resource_name = "BoatAnim"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(3.13834, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("boat:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 4.14105),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.174533, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Interaction/AlternateCamera:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1.86607),
"update": 0,
"values": [Vector3(-0.371912, 0, 0), Vector3(-0.139626, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("boat/Node3D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1.7411, 2.73208),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.4, 1.4, 2)]
}

[sub_resource type="Animation" id="Animation_ovu0l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("boat:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Interaction/AlternateCamera:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.371912, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("boat/Node3D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gumd"]
_data = {
"BoatAnim": SubResource("Animation_2fr0q"),
"RESET": SubResource("Animation_ovu0l")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_vtk8y"]
size = Vector3(0.4, 1, 1.4)

[node name="BoatSpot" type="Node3D"]
script = ExtResource("1_pv1l4")

[node name="Interaction" parent="." instance=ExtResource("2_6pn5e")]
interact_prompt = "Operate Boat"
show_distorted_text = true
interact_sound = ExtResource("3_3xr27")

[node name="Collider" type="CollisionShape3D" parent="Interaction" groups=["interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.8147e-05, 1.5247, -0.252983)
shape = SubResource("BoxShape3D_ah4cb")

[node name="AlternateCamera" type="Node3D" parent="Interaction"]
transform = Transform3D(1, 0, 0, 0, 0.931634, 0.363397, 0, -0.363397, 0.931634, 0, 1.95507, 3.8861)
visible = false
script = ExtResource("8_uwcub")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(800, 256)
render_target_update_mode = 4

[node name="Control" parent="SubViewport" instance=ExtResource("10_vkjiy")]

[node name="boat" parent="." instance=ExtResource("6_d2i44")]

[node name="Node3D" type="Node3D" parent="boat"]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.278936, 2.21166)

[node name="Sprite3D" type="Sprite3D" parent="boat/Node3D"]
transform = Transform3D(0.683013, 0.707107, 0.183013, -0.258819, 0, 0.965926, 0.683013, -0.707107, 0.183013, -1.18049, 0.23007, 0.764343)
pixel_size = 0.015
texture = ExtResource("7_ueh5k")

[node name="Sprite3D2" type="Sprite3D" parent="boat/Node3D"]
transform = Transform3D(-0.683013, 0.707107, -0.183013, -0.258819, -5.21541e-08, 0.965926, 0.683013, 0.707107, 0.183013, 1.18, 0.23, 0.764)
flip_v = true
pixel_size = 0.015
texture = ExtResource("7_ueh5k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7gumd")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8yhjq")

[node name="DreamCondition" parent="." instance=ExtResource("9_vnix6")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, -0.0129161, 0.377149, -0.00454062)
required_key = "boatKey"
require_up = true

[node name="Sprite3D" type="Sprite3D" parent="DreamCondition"]
transform = Transform3D(1, 1.86265e-09, -2.38419e-07, 9.31323e-10, 1, -3.11993e-08, 2.98023e-08, 3.25963e-09, 1, 0, 0.365, 0.01)
pixel_size = 0.0025
billboard = 2
shaded = true
texture_filter = 4
texture = ExtResource("10_6yptr")
script = ExtResource("11_gt5x5")
bob_amount = 0.01

[node name="InvalidInteraction" parent="DreamCondition" instance=ExtResource("12_a0kp1")]
transform = Transform3D(1, 1.86265e-09, -2.5332e-07, 9.31323e-10, 1, -3.11993e-08, 2.98023e-08, 3.25963e-09, 1, -0.0690584, 0.365, 0.01)
interact_prompt = "you cannot start the boat without a key..."
interact_sound = ExtResource("13_onosk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DreamCondition/InvalidInteraction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00443602, 0, 1.19209e-07)
shape = SubResource("BoxShape3D_vtk8y")

[connection signal="on_interact" from="Interaction" to="." method="_on_interaction_object_on_interact"]
[connection signal="on_condition_check" from="DreamCondition" to="." method="set_usable"]

[editable path="SubViewport/Control"]
